[package]
name = "pbrt-ui"
version = "0.0.1"
edition = "2024"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "serde"] }
eframe = { version = "0.31.1", features = ["glow"] }
env_logger = "0.11.7"
egui_extras = "0.31.1"
nom = "7.1.1"
flate2 = "1.1.1"
tempfile = "3.19.1"
tar = "0.4.44"
rfd = { git = "https://github.com/ototoi/rfd.git", branch = "fix/save_file-set_directory-macos" }
log = "0.4.27"
convert_case = "0.8.0"
ply-rs = "0.1.3"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rust-crypto = "0.2.36"
image = "0.25.6"
